--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div>
             <h2>About</h2>
         <h3>Hi! I'm Pete Thinkful</h3>
-          <img class="image-circle" src="pete-thinkful.png" alt="Pete Thinkful">
+          <img class="image-circle" src="images/pete-thinkful.png" alt="Pete Thinkful">
         </div>
         
         
